# estatia

./: .env.example  CLAUDE.md  README.md  pyproject.toml
debug/: fincaraiz-location-missing.html
diagrams/: estatia-flow.mmd
src/agents/: properties_agent.py
src/api/: app.py  schemas.py  streaming.py
src/estatia/: __init__.py  app.py  config.py  graph.py  listing_sources.py  logging_utils.py  models.py  sample_data.py  services.py
src/estatia/templates/: index.html
src/graph/: graph.py
src/state/: __init__.py  evaluation.py  listings.py  news.py  requirements.py  softening.py  state.py
src/tools/: scraper.py
tests/: test_graph.py  test_models.py  test_properties_node.py  test_properties_node_concurrency.py  test_services.py
tests/api/: test_app.py
