[project]
name = "estatia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "langgraph-cli[inmem]>=0.4.25",
    "playwright>=1.59.0",
    "pydantic>=2.7",
    "scrapling[ai,all]>=0.4.8",
    "searxng>=0.0.0.dev0",
]
